Create LoginUseCase and add generate token